# ai-invention-703cc9-network-percolation-features-for-text-re

./: README.md
chat/messages/: README.md
chat/messages/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/3_report_results/: 3_gen_full_paper.md
prompts/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  gen_viz_3.md
prompts/3_report_results/2_gen_demo_art/: gen_demo_art_dataset_1.md  gen_demo_art_experiment_1.md  gen_demo_art_experiment_2.md
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  README_DATASETS.md  add_sixth_dataset.py  combine_all.py  data.py  download_additional.py  download_datasets.py  finalize_datasets.py  generate_variants.py  generate_variants_local.py  mini_data_out.json  preview_data_out.json  pyproject.toml  select_best_3.py  standardize_and_split.py
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  pyproject.toml  results.csv
round-1/research-1/: README.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json  research_report.md
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README.md  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  test_percolation.py
(+54 files in other folders)
