[project]
name = "readability-dataset-collection"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "datasets==5.0.0",
    "huggingface-hub==1.22.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "loguru==0.7.3",
    "requests==2.34.2",
    "pyarrow==24.0.0",
    "tqdm==4.68.4",
    "dill==0.4.1",
    "multiprocess==0.70.19",
    "filelock==3.29.7",
    "fsspec==2026.4.0",
    "packaging==26.2",
    "typing-extensions==4.16.0",
    "xxhash==3.8.1",
    "hf-xet==1.5.1",
    "aiohappyeyeballs==2.7.1",
    "aiohttp==3.14.1",
    "aiosignal==4.14.0",
    "anyio==4.14.1",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "click==8.4.2",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18.0",
    "joblib==1.5.3",
    "multidict==6.7.1",
    "narwhals==2.23.0",
    "pillow==12.0.0",
    "propcache==0.5.2",
    "pyyaml==6.0.3",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "urllib3==2.7.0",
    "yarl==1.24.2"
]
