[project]
name = "percolation-readability"
version = "0.1.0"
description = "Percolation threshold readability model experiment"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.1",
    "pandas==3.0.3",
    "scipy==1.18.0",
    "scikit-learn==1.9.0",
    "sentence-transformers==5.6.0",
    "textstat==0.7.13",
    "nltk==3.10.0",
    "spacy==3.8.14",
    "networkx==3.6.1",
    "matplotlib==3.11.0",
    "seaborn==0.13.2",
    "loguru==0.7.3",
    "datasets==5.0.0",
    "huggingface-hub==1.22.0",
    "requests==2.34.2",
    "pyphen==0.17.2",
    "multiprocess==0.70.19",
    "dill==0.4.1",
    "transformers==5.13.0",
]
